avoid overlap of sticky navbar

--- a/responsive-web-design/product-landing-page/stylesheet.css
+++ b/responsive-web-design/product-landing-page/stylesheet.css
@@ -2,9 +2,21 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
 @import "https://use.fontawesome.com/releases/v5.8.1/css/all.css";
 
+/* BEGIN: these are for the sticky navbar */
+html {
+  scroll-padding-top: 5.5rem;
+}
+nav {
+  height: 5.5rem;
+}
+body.has-navbar-fixed-top {
+  padding-top: 5.5rem;
+}
+/* END */
+
 
 #header-img {
-  min-height: 78px;
+  min-height: 4.5rem;
 }
 
 .key-benefits li {
